--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -8,7 +8,7 @@ font-family: "Roboto", sans-serif;
 box-sizing: border-box;  
 margin: 0;
 padding: 0;
-  @apply bg-fuchsia-700
+  @apply bg-violet-700;
 }
 
 a,
