--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -4,11 +4,7 @@
 
 
 *{
-font-family: "Roboto", sans-serif;  
-box-sizing: border-box;  
-margin: 0;
-padding: 0;
-  @apply bg-violet-700;
+@apply bg-zinc-800 m-0 p-0 box-border font-[body] text-zinc-200;
 }
 
 a,
