--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -3,8 +3,12 @@
 @tailwind utilities;
 
 
-*{
-@apply bg-zinc-800 m-0 p-0 box-border font-[body] text-zinc-200;
+*, {
+@apply  m-0 p-0 box-border text-zinc-200;
+}
+
+body{
+  @apply bg-zinc-800;
 }
 
 a,
